---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: final.md - `typing.Final` - Full diagnostics
mdtest path: crates/ty_python_semantic/resources/mdtest/type_qualifiers/final.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import Final
 2 | 
 3 | MY_CONSTANT: Final[int] = 1
 4 | 
 5 | # more code
 6 | 
 7 | MY_CONSTANT = 2  # error: [invalid-assignment]
 8 | from _stat import ST_INO
 9 | 
10 | ST_INO = 1  # error: [invalid-assignment]
11 | from typing import Final
12 | 
13 | class C:
14 |     x: Final[int] = 1
15 | 
16 |     def f(self):
17 |         self.x = 2  # error: [invalid-assignment]
18 | from typing import Final
19 | 
20 | class C:
21 |     x: Final[int] = 1
22 | 
23 | def __init__(c: C):
24 |     c.x = 2  # error: [invalid-assignment]
25 | from typing import Final
26 | 
27 | UNINITIALIZED: Final[int]  # error: [final-without-value]
```

# Diagnostics

```
error[invalid-assignment]: Reassignment of `Final` symbol `MY_CONSTANT` is not allowed
 --> src/mdtest_snippet.py:3:14
  |
1 | from typing import Final
2 |
3 | MY_CONSTANT: Final[int] = 1
  |              ---------- Symbol declared as `Final` here
4 |
5 | # more code
6 |
7 | MY_CONSTANT = 2  # error: [invalid-assignment]
  | ^^^^^^^^^^^^^^^ Symbol later reassigned here
8 | from _stat import ST_INO
  |
info: rule `invalid-assignment` is enabled by default

```

```
error[invalid-assignment]: Reassignment of `Final` symbol `ST_INO` is not allowed
  --> src/mdtest_snippet.py:10:1
   |
 8 | from _stat import ST_INO
 9 |
10 | ST_INO = 1  # error: [invalid-assignment]
   | ^^^^^^^^^^ Reassignment of `Final` symbol
11 | from typing import Final
   |
info: rule `invalid-assignment` is enabled by default

```

```
error[invalid-assignment]: Cannot assign to final attribute `x` on type `Self@f`
  --> src/mdtest_snippet.py:17:9
   |
16 |     def f(self):
17 |         self.x = 2  # error: [invalid-assignment]
   |         ^^^^^^ `Final` attributes can only be assigned in the class body or `__init__`
18 | from typing import Final
   |
info: rule `invalid-assignment` is enabled by default

```

```
error[invalid-assignment]: Cannot assign to final attribute `x` on type `C`
  --> src/mdtest_snippet.py:24:5
   |
23 | def __init__(c: C):
24 |     c.x = 2  # error: [invalid-assignment]
   |     ^^^ `Final` attributes can only be assigned in the class body or `__init__`
25 | from typing import Final
   |
info: rule `invalid-assignment` is enabled by default

```

```
error[final-without-value]: `Final` symbol `UNINITIALIZED` is not assigned a value
  --> src/mdtest_snippet.py:27:1
   |
25 | from typing import Final
26 |
27 | UNINITIALIZED: Final[int]  # error: [final-without-value]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
info: rule `final-without-value` is enabled by default

```
